// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render PublisherLabel with no prefLabel 1`] = `
<span
  className="mr-3"
>
  Eies av
   
  <span>
    Ramsund og rognan revisjon
  </span>
</span>
`;

exports[`should render PublisherLabel with no props 1`] = `""`;

exports[`should render PublisherLabel with publisher 1`] = `
<span
  className="mr-3"
>
  Eies av
   
  <span>
    Ramsund og Rognan revisjon
  </span>
</span>
`;
